--- a/Webserver_PlatformIO/platformio.ini
+++ b/Webserver_PlatformIO/platformio.ini
@@ -14,11 +14,9 @@ board = disco_f746ng
 framework = stm32cube
 board_build.stm32cube.custom_config_header = yes
 lib_extra_dirs = 
-	C:\Bachelorproef\Webserver_PlatformIO\Middlewares\Third_Party\LwIP\src
-	C:\Bachelorproef\Webserver_PlatformIO\Middlewares\Third_Party\LwIP
-	C:\Bachelorproef\Webserver_PlatformIO\BSP
+	C:\Bachelorproef\internship_platformio_2022\Webserver_PlatformIO\Middlewares\Third_Party\LwIP\src
+	C:\Bachelorproef\internship_platformio_2022\Webserver_PlatformIO\Middlewares\Third_Party\LwIP
 lib_ldf_mode = chain+
-lib_deps = armmbed/mbedtls@^2.23.0
 
 monitor_speed = 115200
 monitor_port = COM3
