--- a/Webserver_PlatformIO/platformio.ini
+++ b/Webserver_PlatformIO/platformio.ini
@@ -25,3 +25,12 @@ monitor_port = COM3
 [platformio]
 include_dir = Inc
 src_dir = Src
+
+
+[env:esp32-s2-kaluga-1]
+platform = espressif32
+board = esp32-s2-kaluga-1
+framework = espidf
+monitor_flags = --raw
+monitor_speed = 115200
+build_flags = -D BOARD_ESP32
