Fixed ESP LCD issues

--- a/Webserver_PlatformIO/platformio.ini
+++ b/Webserver_PlatformIO/platformio.ini
@@ -33,4 +33,5 @@ board = esp32-s2-kaluga-1
 framework = espidf
 monitor_flags = --raw
 monitor_speed = 115200
+monitor_port = COM10
 build_flags = -D BOARD_ESP32
