--- a/Webserver_PlatformIO/.vscode/launch.json
+++ b/Webserver_PlatformIO/.vscode/launch.json
@@ -12,32 +12,35 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/esp32-s2-kaluga-1/firmware.elf",
-            "projectEnvName": "esp32-s2-kaluga-1",
-            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-xtensa-esp32s2@8.4.0+2021r2-patch3/bin",
+            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "projectEnvName": "disco_f746ng",
+            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
+            "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (esp32-s2-kaluga-1)"
+                "task": "Pre-Debug (disco_f746ng)"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/esp32-s2-kaluga-1/firmware.elf",
-            "projectEnvName": "esp32-s2-kaluga-1",
-            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-xtensa-esp32s2@8.4.0+2021r2-patch3/bin",
-            "internalConsoleOptions": "openOnSessionStart"
+            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "projectEnvName": "disco_f746ng",
+            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/esp32-s2-kaluga-1/firmware.elf",
-            "projectEnvName": "esp32-s2-kaluga-1",
-            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-xtensa-esp32s2@8.4.0+2021r2-patch3/bin",
+            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "projectEnvName": "disco_f746ng",
+            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
+            "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
             "loadMode": "manual"
         }
     ]
