--- a/Webserver_PlatformIO/platformio.ini
+++ b/Webserver_PlatformIO/platformio.ini
@@ -17,6 +17,7 @@ lib_extra_dirs =
 	C:\Bachelorproef\internship_platformio_2022\Webserver_PlatformIO\Middlewares\Third_Party\LwIP\src
 	C:\Bachelorproef\internship_platformio_2022\Webserver_PlatformIO\Middlewares\Third_Party\LwIP
 lib_ldf_mode = chain+
+test_transport = custom
 build_flags = -D BOARD_STM32
 
 monitor_speed = 115200
