--- a/Webserver_PlatformIO/platformio.ini
+++ b/Webserver_PlatformIO/platformio.ini
@@ -14,8 +14,8 @@ board = disco_f746ng
 framework = stm32cube
 board_build.stm32cube.custom_config_header = yes
 lib_extra_dirs = 
-	C:\Bachelorproef\internship_platformio_2022\Webserver_PlatformIO\Middlewares\Third_Party\LwIP\src
-	C:\Bachelorproef\internship_platformio_2022\Webserver_PlatformIO\Middlewares\Third_Party\LwIP
+	Middlewares\Third_Party\LwIP\src
+	Middlewares\Third_Party\LwIP
 lib_ldf_mode = chain+
 test_transport = custom
 build_flags = -D BOARD_STM32
