--- a/Webserver_PlatformIO/.vscode/launch.json
+++ b/Webserver_PlatformIO/.vscode/launch.json
@@ -12,21 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "executable": "c:/Bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
             "projectEnvName": "disco_f746ng",
             "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (disco_f746ng)"
+                "task": "Pre-Debug"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "executable": "c:/Bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
             "projectEnvName": "disco_f746ng",
             "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -36,7 +36,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Bachelorproef/internship_platformio_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "executable": "c:/Bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
             "projectEnvName": "disco_f746ng",
             "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
             "internalConsoleOptions": "openOnSessionStart",
