Polished the website to be easier to look at

--- a/Webserver_PlatformIO/.vscode/launch.json
+++ b/Webserver_PlatformIO/.vscode/launch.json
@@ -12,11 +12,11 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "executable": "c:/bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
             "projectEnvName": "disco_f746ng",
-            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "toolchainBinDir": "C:/Users/Stijn Vdb/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
+            "svdPath": "C:/Users/Stijn Vdb/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
             "preLaunchTask": {
                 "type": "PlatformIO",
                 "task": "Pre-Debug (disco_f746ng)"
@@ -26,21 +26,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "executable": "c:/bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
             "projectEnvName": "disco_f746ng",
-            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "toolchainBinDir": "C:/Users/Stijn Vdb/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd"
+            "svdPath": "C:/Users/Stijn Vdb/.platformio/platforms/ststm32/misc/svd/STM32F746.svd"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
+            "executable": "c:/bachelorproef/internship_platformio_2022_github/internship_PlatformIO_2022/Webserver_PlatformIO/.pio/build/disco_f746ng/firmware.elf",
             "projectEnvName": "disco_f746ng",
-            "toolchainBinDir": "C:/Users/stijn/.platformio/packages/toolchain-gccarmnoneeabi@1.70201.0/bin",
+            "toolchainBinDir": "C:/Users/Stijn Vdb/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
-            "svdPath": "C:/Users/stijn/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
+            "svdPath": "C:/Users/Stijn Vdb/.platformio/platforms/ststm32/misc/svd/STM32F746.svd",
             "loadMode": "manual"
         }
     ]
